# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_calc_script.py  brain_even.py  brain_even_script.py  brain_game.py  brain_game_script.py  brain_games.py  brain_gcd.py  brain_gcd_script.py  brain_prime.py  brain_prime_script.py  brain_progression.py  brain_progression_script.py  standard_answers.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_game.py  brain_gcd.py  brain_prime.py  brain_progression.py  engine.py
