[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "first project which is a braingame. It s developed on python"
authors = ["bogdan <telioko@tutanota.com>"]
readme = "README.md"
packages = [{ include = "brain_games" }]
classifiers = ['Topic :: Software Development - Pycharm Community edition :: Libraries - prompt :: Python Modules - random']
repository = 'https://github.com/HugoTheDeveloper/python-project-49'

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.games.brain_game:main"
brain-even = "brain_games.scripts.games.brain_even:main"
brain-calc = "brain_games.scripts.games.brain_calc:main"
brain-gcd = "brain_games.scripts.games.brain_gcd:main"
brain-progression = "brain_games.scripts.games.brain_progression:main"
brain-prime = "brain_games.scripts.games.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
