[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "first project which is a braingame. It s developed on python"
authors = ["bogdan <telioko@tutanota.com>"]
readme = "README.md"
packages = [{ include = "brain_games" }]
classifiers = ['Topic :: Software Development - Pycharm Community edition :: Libraries - prompt :: Python Modules - random']
repository = 'https://github.com/HugoTheDeveloper/python-project-49'

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_game_script:main"
brain-even = "brain_games.scripts.brain_even_script:main"
brain-calc = "brain_games.scripts.brain_calc_script:main"
brain-gcd = "brain_games.scripts.brain_gcd_script:main"
brain-progression = "brain_games.scripts.brain_progression_script:main"
brain-prime = "brain_games.scripts.brain_prime_script:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
